# trading-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.codex/agents/: context-curator.md  designer.md  engineer.md  product-strategist.md  public-equity-analyst.md  public-equity-strategist.md  qa-reviewer.md  tech-architect.md
.github/workflows/: ci.yml  supabase-migration-check.yml
apps/web/: README.md  __init__.py  main.py
config/: strategy_registry.json
data/reference/: mlp_watchlist.csv  phase2_watchlist.csv  sp100_watchlist.csv  sp500_watchlist.csv
docker/: entrypoint.sh
docs/agents/: CONTEXT_BUGS.md  CONTEXT_CURATION.md  CONTEXT_DESIGN.md  CONTEXT_FINANCE.md  CONTEXT_PRODUCT.md  CONTEXT_QA.md  CONTEXT_TECH.md  public-equity-analyst-critique-brief-2026-05-22.md
docs/design/: DESIGN.md  information-hierarchy.md
docs/engineering/: ENGINEERING.md  repository-structure.md
docs/finance/: FINANCE.md
docs/operations/: platform-projects.md  railway-cli-troubleshooting.md  weekly-run-automation.md
docs/product/: PRODUCT.md  Trading System - Core Thesis.rtf  (+4 more)
infra/: railway-weekly-run.toml  railway-weekly-validation.toml
scripts/: generate_password_hash.py  railway_safe.sh
supabase/: config.toml
tests/: README.md  test_canonical_strategy_replay.py  test_etf_trend_rotation_refinement.py  test_selective_mean_reversion_refinement.py  test_strategy_registry.py  test_ui_data.py  test_universes.py  test_watchlist_strategy_payload.py  test_web_routes.py  test_weekly_runs.py  test_weekly_validation.py
(+271 files in other folders)
