[project]
name = "trading-system"
version = "0.1.0"
description = "Internal weekly equity intelligence platform."
readme = "docs/product/PRODUCT.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "itsdangerous>=2.2,<3.0",
  "bcrypt>=5.0,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.5,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "apps",
  "apps.web",
  "packages",
  "packages.core",
  "packages.db",
  "packages.schemas",
  "services",
  "services.jobs",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
